แก้logic แอดมิน
